--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "pinia": "^2.1.7",
     "vue": "^3.3.10",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.1",
-    "vite": "^5.0.5",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "vite": "^5.0.5"
   }
 }
