--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "har-validator": "^5.1.5",
+    "leaflet-routing-machine": "^3.2.12",
+    "node-nominatim2": "^0.1.0",
     "pinia": "^2.1.7",
+    "request": "^2.88.2",
+    "tough-cookie": "^4.1.3",
+    "uuid": "^8.3.2",
     "vue": "^3.3.10",
     "vue-router": "^4.0.13"
   },
